- fixed composer.json

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=7.2.0",
-        "azonmedia/components": "dev-master",
+        "azonmedia/components": "dev-master"
     },
     "autoload": {
         "psr-4": {
