--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,11 @@
     ],
     "require": {
         "php": ">=7.2.0",
-        "azonmedia/components": "dev-master"
+        "azonmedia/components": "dev-master",
+        "azonmedia/utilities": "dev-master",
+        "azonmedia/exceptions": "dev-master",
+        "azonmedia/translator": "dev-master",
+        "azonmedia/routing": "dev-master"
     },
     "autoload": {
         "psr-4": {
